part-3/grocer.css
body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  font-family: "Lucida Grande", "Helvetica", sans-serif;
}

/* LAYOUT UTILS */
.flex {
  display: -webkit-flex;
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-row-between {
  flex-direction: row;
  justify-content: space-between;
}

.flex-full {
  flex: 1;
}

/* HEADER */
.site-header {
  flex: 0;
  padding: 4px 0px;
  border-bottom: 2px solid #ccc;
  background-color: #eee;
}

.site-header > *:first-child {
  margin-left: 12px;
}

.site-header > *:last-child {
  margin-right: 12px;
}

.site-header h1 {
  font-size: 24px;
}

.site-header button {
  font-size: 20px;
}

/* SIDEBAR */
.sidebar {
  flex: 0 0 20%;
  border-right: solid 1px #ccc;
}

.sidebar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.sidebar h4 {
  background-color: #ddd;
  border-bottom: 1px solid #ccc;
  margin: 0;
  padding: 4px;
}

.sidebar li {
  padding: 4px;
}

/* CONTENT */
.content {
  flex: 1;
  padding: 4px 0;
}

.content * {
  padding: 0 12px;
}

/* ITEM LIST */
.item-section {
  list-style-type: none;
  margin: 32px 0 0;
  padding: 0;
}

.item-section h3 {
  font-weight: normal;
  font-style: italic;
}

.item {
  margin-bottom: 8px;
}

.item:hover {
  background-color: #eee;
}

.item > * {
  font-size: 18px;
  padding: 8px;
}

.item-name {
  flex: 1;
}

.item-price {
  flex: 0;
}

/* MODAL SECTION */

/* The Modal (background) */
.modal-overlay {
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  height: 100%;
  left: 0;
  overflow: hidden;
  padding: 100px 0 0 0;
  position: fixed;
  right: 0;
  width: 100%;
  visibility: hidden;
  z-index: 1;
}

/* Modal Content */
.modal-container {
  background-color: rgba(255, 255, 255, 1);
  border: 1px solid rgba(110, 107, 107, 1);
  display: flex;
  flex-direction: column;
  left: 22%;
  margin: auto;
  padding: 20px;
  position: absolute;
  top: 25%;
  visibility: hidden;
  width: 60%;
  z-index: 3;
}

.modal-body {
  flex-direction: column;
}

.modal-header, .modal-body, .modal-footer  {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.cart-close:hover,
.cart-close:focus {
  color: rgba(125, 119, 119, 1);
  cursor: pointer;
  text-decoration: none;
}

.modal-total-price {
  margin: 0 0 0 0%;
}

/* Modal Footer */
.modal-footer {
   margin: 2% 0;
}

.modal-footer > button {
  align-items: flex-start;
  background-color: rgb(157, 151, 136);
  border-color: rgb(157, 151, 136);
  border-style: solid;
  border-width: 3px;
  box-shadow: 3px 5px 3px rgb(136, 134, 134);
  box-sizing: border-box;
  cursor: pointer;
  padding: 2px 6px 3px;
  text-align: center;
  width: 10%;
}

.show-modal {
  visibility: visible;
}

